--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Upload Photo</title>
+    <title>AI Photo Search</title>
     <link rel="icon" href="data:,">
 
-    <!-- API Gateway SDK dependencies -->
+    <!-- SDK dependencies -->
     <script src="sdk/lib/axios/dist/axios.standalone.js"></script>
     <script src="sdk/lib/CryptoJS/rollups/crypto-js.js"></script>
     <script src="sdk/lib/CryptoJS/rollups/sha256.js"></script>
@@ -19,17 +19,16 @@
     <script src="sdk/apigClient.js"></script>
 
     <style>
-        body {
-            font-family: Arial;
-            margin: 40px;
-            background: #f4f4f4;
+        body { font-family: Arial, margin:40px, background:#f4f4f4; }
+        #results img {
+            width: 250px;
+            margin: 10px;
+            border-radius: 10px;
+            box-shadow: 0 0 8px rgba(0,0,0,0.2);
         }
         .nav a {
-            padding: 10px 20px;
-            background: #0073bb;
-            color: white;
-            text-decoration: none;
-            border-radius: 6px;
+            padding:10px 20px; background:#0073bb; color:white;
+            text-decoration:none; border-radius:6px;
         }
     </style>
 </head>
@@ -37,61 +36,71 @@
 <body>
 
 <div class="nav">
-    <a href="index.html">Back to Search</a>
+    <a href="upload.html">Upload Photos</a>
 </div>
 
-<h1>Upload Photo</h1>
+<h1>Search Photos</h1>
 
-<input type="file" id="photoFile"><br><br>
-<input type="text" id="customLabels" placeholder="Sam, Sally"><br><br>
+<input type="text" id="searchText" placeholder="Search e.g. 'dog', 'cat'" size="40">
+<button onclick="doSearch()">Search</button>
 
-<button onclick="uploadPhoto()">Upload</button>
-
-<div id="status"></div>
+<h2>Results</h2>
+<div id="results"></div>
 
 <script>
-    var apigClient = apigClientFactory.newClient({
-        apiKey: "1anI1JHNZtaFEwxoG8UEn7exdCvdsRT02NljyLuq"
-    });
+var apigClient = apigClientFactory.newClient({
+    apiKey: "1anI1JHNZtaFEwxoG8UEn7exdCvdsRT02NljyLuq"
+});
 
-    function uploadPhoto() {
-        let file = document.getElementById("photoFile").files[0];
-        let labels = document.getElementById("customLabels").value;
+function doSearch() {
+    let q = document.getElementById("searchText").value;
 
-        if (!file) {
-            alert("Please select a file.");
+    apigClient.searchGet({ q: q }, {}, {})
+    .then(function(response) {
+
+        console.log("RAW SEARCH RESPONSE:", response);
+
+        let backend = response.data;
+
+        // ALWAYS PARSE body from API Gateway
+        if (backend.body && typeof backend.body === "string") {
+            backend = JSON.parse(backend.body);
+        }
+
+        console.log("PARSED BACKEND:", backend);
+
+        if (!backend.results || !Array.isArray(backend.results)) {
+            alert("No results returned from backend.");
+            console.error("INVALID RESULTS FORMAT:", backend);
             return;
         }
 
-        // FIX: wrap file in Blob so API Gateway gets binary
-        let fileBlob = new Blob([file], { type: file.type });
+        let results = backend.results;
+        let div = document.getElementById("results");
+        div.innerHTML = "";
 
-        let params = {
-            object: file.name,
-            "Content-Type": file.type,
-            "x-amz-meta-customLabels": labels
-        };
+        results.forEach(item => {
 
-        let additionalParams = {
-            headers: {
-                "Content-Type": file.type,
-                "x-amz-meta-customLabels": labels
-            }
-        };
+            console.log("ITEM RESULT:", item);
 
-        apigClient.uploadPut(params, fileBlob, additionalParams)
-            .then(function(response) {
-                console.log("Upload success:", response);
-                document.getElementById("status").innerHTML =
-                    "<b style='color:green;'>Upload Successful!</b>";
-            })
-            .catch(function(error) {
-                console.error("Upload error:", error);
-                document.getElementById("status").innerHTML =
-                    "<b style='color:red;'>Upload Failed</b>";
-            });
-    }
+
+            let imgUrl = item.url
+                ? item.url
+                : `https://${item.bucket}.s3.amazonaws.com/${item.objectKey}`;
+
+            let img = document.createElement("img");
+            img.src = imgUrl;
+            div.appendChild(img);
+        });
+
+    })
+    .catch(function(error) {
+        console.log("Search error:", error);
+        alert("Search failed. Check console.");
+    });
+}
 </script>
+
 
 </body>
 </html>
